--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <header>
         <div class="header-container">           
             <a href="/src/index.html" class="logo">
-                <img src="/src/img/logo.png" alt="logo">
+                <img src="./src/img/logo.png" alt="logo">
             </a>
             <div class="nav-container">
                 <ul class="nav-list">
                     <li>
-                        <a href="/src/index.html" style="color: orange;">Home</a>
+                        <a href="./src/index.html" style="color: orange;">Home</a>
                     </li>
                     <li>
-                        <a href="/src/html/Products.html">Products</a>
+                        <a href="./src/html/Products.html">Products</a>
                     </li>
                     <li>
-                        <a href="/src/html/About.html">About</a>
+                        <a href="./src/html/About.html">About</a>
                     </li>
                     <li>
-                        <a href="/src/html/Contact.html">Contact</a>
+                        <a href="./src/html/Contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
